[gd_scene load_steps=10 format=3 uid="uid://c3la8dk8cql35"]

[ext_resource type="PackedScene" uid="uid://yqqga1qlo5lc" path="res://src/entities/effects/trail/trail.tscn" id="1_dpfbh"]
[ext_resource type="Script" path="res://src/entities/wind/wind_trail.gd" id="1_w4d55"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ve0cu"]
frequency = 0.005

[sub_resource type="NoiseTexture" id="NoiseTexture_12ms2"]
seamless = true
noise = SubResource("FastNoiseLite_ve0cu")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xiq4b"]
resource_local_to_scene = true
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true

[sub_resource type="ImmediateMesh" id="ImmediateMesh_ee5ll"]
resource_local_to_scene = true

[sub_resource type="Curve" id="Curve_5onm7"]
resource_local_to_scene = true
_data = [Vector2(0.00576369, 0), 0.0, 2.64193, 0, 0, Vector2(0.501441, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -2.69064, 0.0, 0, 0]
point_count = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8c834"]
resource_local_to_scene = true
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
vertex_color_is_srgb = true

[sub_resource type="ImmediateMesh" id="ImmediateMesh_f5yi6"]
resource_local_to_scene = true

[node name="WindTrail" type="Node3D"]
script = ExtResource("1_w4d55")
noise_texture = SubResource("NoiseTexture_12ms2")

[node name="PositionHorizontalA" type="Position3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0, 0)

[node name="PositionHorizontalB" type="Position3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0, 0)

[node name="PositionVerticalA" type="Position3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="PositionVerticalB" type="Position3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)

[node name="Trails" type="Node" parent="."]

[node name="TrailHorizontal" parent="Trails" instance=ExtResource("1_dpfbh")]
material_override = SubResource("StandardMaterial3D_xiq4b")
mesh = SubResource("ImmediateMesh_ee5ll")
skeleton = NodePath("../..")
trail_width = SubResource("Curve_5onm7")

[node name="TrailVertical" parent="Trails" instance=ExtResource("1_dpfbh")]
material_override = SubResource("StandardMaterial3D_8c834")
mesh = SubResource("ImmediateMesh_f5yi6")
skeleton = NodePath("../..")
trail_width = SubResource("Curve_5onm7")
